dist/1.0/bin/sample/retrieveUnpackaged/objects/Competitors__c.object
<CustomObject>
    <description>Competitors, potential revenue data in relation to Customer Account.</description>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <description>End Date of Agreement between Customer and Competitor</description>
        <inlineHelpText>End Date of Agreement between Customer and Competitor</inlineHelpText>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Competitor Account</description>
        <inlineHelpText>Competitor Account</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors (Competitor)</relationshipLabel>
        <relationshipName>Competitors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Customer</description>
        <inlineHelpText>Customer</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business</description>
        <inlineHelpText>Line of Business</inlineHelpText>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLLOCATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue__c</fullName>
        <description>Potential Monthly Revenue</description>
        <inlineHelpText>Potential Monthly Revenue</inlineHelpText>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remind_Before__c</fullName>
        <description>How many month before Agreement End Date a reminder should be sent to Account Owner</description>
        <inlineHelpText>How many month before Agreement End Date a reminder should be sent to Account Owner</inlineHelpText>
        <label>Remind Before</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CMP{000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>